<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/upload_screen"
    android:orientation="vertical"
    tools:context=".UploadActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="270dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="215dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/uploadName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/white_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_the_name"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/uploadSurname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/white_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_the_surname"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/uploadPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/white_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_the_phone"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/uploadCompany"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/white_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_company_name"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:inputType="textPersonName"
            />
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:textColor="@color/nut_brown"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>